src/test/deca/context/valid/provided/ContextSansObjet/Unitaire/printlnAllTypes.deca
//Description:
//  variable sans définition / déclaration
//
//Résultat:
//  3
//  true
//  false
//  3.5
//  Hello, world!


{
	println(3);
	println(3.5);
	println("Hello, world!");
}
