src/test/deca/context/invalid/ContextSansObjet/Identification/varIndef.deca
//Description:
//  variable sans définition / déclaration
//
//Résultat:
// Erreur Contextuelle
//  ligne 8 : type non défini
{
indefini=10;
}
